--- a/spring-boot/src/main/resources/templates/form.html
+++ b/spring-boot/src/main/resources/templates/form.html
@@ -61,7 +61,7 @@
 
 <body>
 <h1>Form</h1>
-<form th:action="@{/users}" th:object="${user}" method="post">
+<form th:method = "POST" th:action = "@{/}" th:object = "${user}">
   <input type="hidden" th:field="*{id}"/>
   <label for="firstName">Name:</label>
   <input type="text" id="firstName" th:field="*{firstName}"/>
